# actix-web-api-rs

./: Cargo.toml  README.md  docker-compose.yml  names.py
db-seeder/: Cargo.toml
db-seeder/src/: main.rs
dev/db-seeder/src/: main.rs
src/: error.rs  fields.rs  lib.rs  main.rs  models.rs  schemas.rs  validators.rs
src/endpoints/: users.rs
src/fields/: common.rs  mod.rs  sort_fields.rs
src/utils/jwt/: decoder.rs  jwks.rs  jwks_decoder.rs  key_provider.rs  mod.rs
src/utils/oauth/: jwt_decoder.rs  mod.rs  openid_config.rs
src/utils/oauth/models/: mod.rs
src/web/: json.rs  mod.rs  query.rs
