[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = { "git" ="https://github.com/actix/actix-web", tag="web-v4.0.0-beta.13" }
actix-web = "4.0.0-beta.15"
cached = "0.26"
jsonwebtoken = "7.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
mongodb = "2.0"
serde_urlencoded = "0.7"
validator={ version = "0.14", features = ["derive"] }
futures="0.3"
regex = "1.5"
lazy_static = "1.4.0"
env_logger = "0.9"
log = "0.4"